--- a/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
+++ b/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.25098039220000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="0.36470588235294116" green="0.6588235294117647" blue="0.86274509803921573" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstItem="c02-xx-DPP" firstAttribute="centerY" secondItem="0eI-Ix-cSO" secondAttribute="centerY" id="1yb-7f-3xp"/>
                             <constraint firstItem="c02-xx-DPP" firstAttribute="centerX" secondItem="0eI-Ix-cSO" secondAttribute="centerX" id="NVi-9O-ftJ"/>
@@ -43,8 +43,48 @@
             </objects>
             <point key="canvasLocation" x="-50" y="155"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="u4h-ai-KC4">
+            <objects>
+                <viewController storyboardIdentifier="LoginViewController" id="pNi-P7-3hE" customClass="LoginViewController" customModule="SKTwitterClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="inJ-ij-5hs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG" translatesAutoresizingMaskIntoConstraints="NO" id="hFu-Yx-J1d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPj-Tq-rVY">
+                                <rect key="frame" x="20" y="351.5" width="335" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8Nf-Fo-NHO"/>
+                                </constraints>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="twitterLogin:" destination="pNi-P7-3hE" eventType="touchUpInside" id="KaQ-Ml-Wd9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BPj-Tq-rVY" firstAttribute="centerY" secondItem="PwW-2I-MXS" secondAttribute="centerY" constant="30" id="LuU-d8-ANz"/>
+                            <constraint firstItem="PwW-2I-MXS" firstAttribute="trailing" secondItem="hFu-Yx-J1d" secondAttribute="trailing" id="UqR-jD-kMV"/>
+                            <constraint firstItem="PwW-2I-MXS" firstAttribute="trailing" secondItem="BPj-Tq-rVY" secondAttribute="trailing" constant="20" id="V36-pt-RCC"/>
+                            <constraint firstItem="hFu-Yx-J1d" firstAttribute="top" secondItem="PwW-2I-MXS" secondAttribute="top" id="c58-Yh-ZHA"/>
+                            <constraint firstItem="hFu-Yx-J1d" firstAttribute="leading" secondItem="PwW-2I-MXS" secondAttribute="leading" id="sTT-Vx-B8W"/>
+                            <constraint firstItem="PwW-2I-MXS" firstAttribute="bottom" secondItem="hFu-Yx-J1d" secondAttribute="bottom" id="tPz-q5-F5Y"/>
+                            <constraint firstItem="BPj-Tq-rVY" firstAttribute="leading" secondItem="PwW-2I-MXS" secondAttribute="leading" constant="20" id="wJy-GE-O7c"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="PwW-2I-MXS"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Da-nw-Ucl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="713" y="154"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="BG" width="2025" height="3600"/>
         <image name="twitterIcon" width="1139" height="926"/>
     </resources>
 </document>
