--- a/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
+++ b/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
@@ -54,12 +54,14 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG" translatesAutoresizingMaskIntoConstraints="NO" id="hFu-Yx-J1d">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPj-Tq-rVY">
-                                <rect key="frame" x="20" y="351.5" width="335" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="8Nf-Fo-NHO"/>
-                                </constraints>
-                                <state key="normal" title="Login"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPj-Tq-rVY">
+                                <rect key="frame" x="20" y="342.5" width="335" height="62"/>
+                                <state key="normal" image="ButtonTwitterNormal"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadiusView">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="twitterLogin:" destination="pNi-P7-3hE" eventType="touchUpInside" id="KaQ-Ml-Wd9"/>
                                 </connections>
@@ -135,6 +137,7 @@
     </scenes>
     <resources>
         <image name="BG" width="2025" height="3600"/>
+        <image name="ButtonTwitterNormal" width="290" height="62"/>
         <image name="twitterIcon" width="1139" height="926"/>
     </resources>
 </document>
