--- a/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
+++ b/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -95,7 +96,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sTA-6t-ETp">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e01-s6-Npb">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="e01-s6-Npb">
                                     <size key="itemSize" width="357" height="123"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -118,6 +119,11 @@
                                                                 <constraint firstAttribute="width" constant="70" id="lJm-M6-KIN"/>
                                                                 <constraint firstAttribute="width" secondItem="YC1-pQ-Zji" secondAttribute="height" multiplier="1:1" id="vZd-F5-bIn"/>
                                                             </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                                                                    <real key="value" value="35"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6CO-Bd-0wS">
                                                             <rect key="frame" x="86" y="20" width="235" height="21"/>
@@ -179,6 +185,101 @@
                                             <outlet property="userHandleLabel" destination="64o-pT-pXp" id="ApP-f3-yEe"/>
                                             <outlet property="userImageView" destination="YC1-pQ-Zji" id="JLd-TH-NzO"/>
                                             <outlet property="userScreenNameLabel" destination="6CO-Bd-0wS" id="tT5-sj-J5G"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FollwerGridStyleCollectionViewCell" id="rJc-dy-Ov9" customClass="FollwerGridStyleCollectionViewCell" customModule="SKTwitterClient" customModuleProvider="target">
+                                        <rect key="frame" x="99" y="123" width="177" height="198"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="177" height="198"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhG-Ae-UKo">
+                                                    <rect key="frame" x="6" y="6" width="165" height="186"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HPI-ll-w2R">
+                                                            <rect key="frame" x="0.0" y="0.0" width="165" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="60" id="Ht4-xr-fpp"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ua9-rc-TRK">
+                                                            <rect key="frame" x="57" y="35" width="50" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="Ua9-rc-TRK" secondAttribute="height" multiplier="1:1" id="ptf-vi-wxW"/>
+                                                                <constraint firstAttribute="width" constant="50" id="wJq-Gp-lGe"/>
+                                                            </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                                                                    <real key="value" value="25"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njh-eZ-aXg">
+                                                            <rect key="frame" x="6" y="98" width="153" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5k2-tG-vJd">
+                                                            <rect key="frame" x="6" y="127" width="153" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5x-44-aSe">
+                                                            <rect key="frame" x="6" y="156" width="153" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.36470588240000001" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="deviceRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="njh-eZ-aXg" firstAttribute="leading" secondItem="dhG-Ae-UKo" secondAttribute="leading" constant="6" id="3HK-Nn-Ify"/>
+                                                        <constraint firstItem="z5x-44-aSe" firstAttribute="leading" secondItem="5k2-tG-vJd" secondAttribute="leading" id="56z-pT-dOC"/>
+                                                        <constraint firstAttribute="bottom" secondItem="z5x-44-aSe" secondAttribute="bottom" constant="9" id="B3Z-oB-zxu"/>
+                                                        <constraint firstItem="5k2-tG-vJd" firstAttribute="leading" secondItem="njh-eZ-aXg" secondAttribute="leading" id="Jy1-AC-Glb"/>
+                                                        <constraint firstAttribute="trailing" secondItem="HPI-ll-w2R" secondAttribute="trailing" id="KqE-ex-KLD"/>
+                                                        <constraint firstItem="Ua9-rc-TRK" firstAttribute="width" secondItem="Ua9-rc-TRK" secondAttribute="height" multiplier="1:1" id="MmA-ft-93X"/>
+                                                        <constraint firstItem="z5x-44-aSe" firstAttribute="trailing" secondItem="5k2-tG-vJd" secondAttribute="trailing" id="OxY-SX-nZx"/>
+                                                        <constraint firstItem="5k2-tG-vJd" firstAttribute="trailing" secondItem="njh-eZ-aXg" secondAttribute="trailing" id="Rqc-g5-y8v"/>
+                                                        <constraint firstItem="Ua9-rc-TRK" firstAttribute="centerX" secondItem="HPI-ll-w2R" secondAttribute="centerX" id="Z6Y-3G-76k"/>
+                                                        <constraint firstItem="njh-eZ-aXg" firstAttribute="top" secondItem="Ua9-rc-TRK" secondAttribute="bottom" constant="8" id="cfL-By-gHv"/>
+                                                        <constraint firstItem="HPI-ll-w2R" firstAttribute="top" secondItem="dhG-Ae-UKo" secondAttribute="top" id="dHd-Vo-fdg"/>
+                                                        <constraint firstAttribute="width" constant="165" id="dUL-5v-bST"/>
+                                                        <constraint firstAttribute="trailing" secondItem="njh-eZ-aXg" secondAttribute="trailing" constant="6" id="lNd-Qs-h2f"/>
+                                                        <constraint firstItem="5k2-tG-vJd" firstAttribute="top" secondItem="njh-eZ-aXg" secondAttribute="bottom" constant="8" id="n9n-Z6-T1v"/>
+                                                        <constraint firstItem="Ua9-rc-TRK" firstAttribute="centerY" secondItem="HPI-ll-w2R" secondAttribute="bottom" id="sRW-rq-DOx"/>
+                                                        <constraint firstItem="HPI-ll-w2R" firstAttribute="leading" secondItem="dhG-Ae-UKo" secondAttribute="leading" id="w8s-Wx-GmS"/>
+                                                        <constraint firstItem="z5x-44-aSe" firstAttribute="top" secondItem="5k2-tG-vJd" secondAttribute="bottom" constant="8" id="yhW-0O-ydD"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                                                            <real key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadiusView">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                            </subviews>
+                                        </view>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="dhG-Ae-UKo" secondAttribute="trailing" constant="6" id="G9P-3c-vpN"/>
+                                            <constraint firstItem="dhG-Ae-UKo" firstAttribute="top" secondItem="rJc-dy-Ov9" secondAttribute="top" constant="6" id="Ofl-ej-dYW"/>
+                                            <constraint firstItem="dhG-Ae-UKo" firstAttribute="leading" secondItem="rJc-dy-Ov9" secondAttribute="leading" constant="6" id="Sik-ir-Vgd"/>
+                                            <constraint firstAttribute="bottom" secondItem="dhG-Ae-UKo" secondAttribute="bottom" constant="6" id="ndp-ZB-Tea"/>
+                                        </constraints>
+                                        <size key="customSize" width="177" height="198"/>
+                                        <connections>
+                                            <outlet property="cellWidthConstraint" destination="dUL-5v-bST" id="cvL-IL-r4a"/>
+                                            <outlet property="userBioLabel" destination="z5x-44-aSe" id="kKq-V4-AjM"/>
+                                            <outlet property="userCoverImageView" destination="HPI-ll-w2R" id="2kd-a5-CnL"/>
+                                            <outlet property="userHandleLabel" destination="5k2-tG-vJd" id="WAh-yt-Yp3"/>
+                                            <outlet property="userImageView" destination="Ua9-rc-TRK" id="9hM-Tz-TJD"/>
+                                            <outlet property="userScreenNameLabel" destination="njh-eZ-aXg" id="PYH-s5-AhE"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
