--- a/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
+++ b/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                                                                     <real key="value" value="35"/>
                                                                 </userDefinedRuntimeAttribute>
                                                                 <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                                    <real key="value" value="2"/>
+                                                                    <real key="value" value="3"/>
                                                                 </userDefinedRuntimeAttribute>
                                                                 <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                                     <color key="value" red="0.36470588240000001" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="deviceRGB"/>
@@ -225,7 +225,7 @@
                                                                     <real key="value" value="25"/>
                                                                 </userDefinedRuntimeAttribute>
                                                                 <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                                    <real key="value" value="2"/>
+                                                                    <real key="value" value="3"/>
                                                                 </userDefinedRuntimeAttribute>
                                                                 <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                                     <color key="value" red="0.36470588240000001" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="deviceRGB"/>
@@ -323,6 +323,64 @@
             </objects>
             <point key="canvasLocation" x="1421.5999999999999" y="154.27286356821591"/>
         </scene>
+        <!--User Details View Controller-->
+        <scene sceneID="t2Y-C6-kFr">
+            <objects>
+                <viewController storyboardIdentifier="UserDetailsViewController" automaticallyAdjustsScrollViewInsets="NO" id="vo3-uR-HIV" customClass="UserDetailsViewController" customModule="SKTwitterClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uft-p4-GI5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="37R-Rq-DMo">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UserTweetTableViewCell" rowHeight="125" id="QWH-8w-Tlg" customClass="UserTweetTableViewCell" customModule="SKTwitterClient" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="125"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QWH-8w-Tlg" id="Hiu-AV-vlq">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vo3-uR-HIV" id="Cad-Ax-tor"/>
+                                    <outlet property="delegate" destination="vo3-uR-HIV" id="jim-de-bf3"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPm-k4-AlR">
+                                <rect key="frame" x="12" y="32" width="35" height="64.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="SJ3-LC-9os"/>
+                                    <constraint firstAttribute="width" secondItem="cPm-k4-AlR" secondAttribute="height" multiplier="6:11" id="tZv-Dj-KMi"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="arrow_back"/>
+                                <connections>
+                                    <action selector="backTappedWithSender:" destination="vo3-uR-HIV" eventType="touchUpInside" id="rGo-ti-Qkh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.36470588240000001" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="cPm-k4-AlR" firstAttribute="leading" secondItem="xma-wZ-Eog" secondAttribute="leading" constant="12" id="1VO-YK-3vW"/>
+                            <constraint firstItem="xma-wZ-Eog" firstAttribute="bottom" secondItem="37R-Rq-DMo" secondAttribute="bottom" id="1qi-gP-quS"/>
+                            <constraint firstItem="37R-Rq-DMo" firstAttribute="top" secondItem="xma-wZ-Eog" secondAttribute="top" id="E9Y-or-fNl"/>
+                            <constraint firstItem="cPm-k4-AlR" firstAttribute="top" secondItem="xma-wZ-Eog" secondAttribute="top" constant="12" id="Rte-CD-YwM"/>
+                            <constraint firstItem="xma-wZ-Eog" firstAttribute="trailing" secondItem="37R-Rq-DMo" secondAttribute="trailing" id="nvG-nU-EFf"/>
+                            <constraint firstItem="37R-Rq-DMo" firstAttribute="leading" secondItem="xma-wZ-Eog" secondAttribute="leading" id="tSM-z8-gBx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xma-wZ-Eog"/>
+                    </view>
+                    <connections>
+                        <outlet property="userDataTableView" destination="37R-Rq-DMo" id="GRj-DG-m6b"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3RJ-mL-UmJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2092" y="154.27286356821591"/>
+        </scene>
         <!--Authentication Web View View Controller-->
         <scene sceneID="ARp-4q-blG">
             <objects>
@@ -377,6 +435,7 @@
     <resources>
         <image name="BG" width="2025" height="3600"/>
         <image name="ButtonTwitterNormal" width="290" height="62"/>
+        <image name="arrow_back" width="12" height="19"/>
         <image name="twitterIcon" width="1139" height="926"/>
     </resources>
 </document>
